[package]
name = "stake-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = "3"
log = "0.4"
hex = "0.4"
frame-metadata = { version = "15.0.0", features = ["v13"] }
parity-scale-codec = "3.1.5"
sp_core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-core" }
pallet_balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "pallet-balances" }
pallet_system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "frame-system" }
mockito = "0.31.0"
chrono = "0.4.22"
csv = "1.1.6"
poloto = "15.2.0"
anyhow = "1.0.65"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
testfile = "0.0.4"

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/*/*" },
]
